--- a/gateway/.gitignore
+++ b/gateway/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### other repo ###
+!**/msa/msa-practice/firstservice
+!**/msa/msa-practice/secondservice
+!**/msa/msa-practice/zuulserver
+!**/msa/msa-practice/eurekaserver
