--- a/zuulserver/.gitignore
+++ b/zuulserver/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### other repo ###
+!**/msa/msa-practice/firstservice
+!**/msa/msa-practice/gateway
+!**/msa/msa-practice/secondserver
+!**/msa/msa-practice/eureka-server
