--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,14 +11,14 @@ eureka:
 spring:
   application:
     name: apigateway-service
-  cloud:
-    gateway:
-      routes:
-        - id: first-service
-          uri: http://localhost:9001/
-          predicates:
-            - Path=/first-service/**
-        - id: second-service
-          uri: http://localhost:9002/
-          predicates:
-            - Path=/second-service/**
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: first-service
+#          uri: http://localhost:9001/
+#          predicates:
+#            - Path=/first-service/**
+#        - id: second-service
+#          uri: http://localhost:9002/
+#          predicates:
+#            - Path=/second-service/**
