--- a/firstservice/src/main/resources/application.yml
+++ b/firstservice/src/main/resources/application.yml
@@ -3,9 +3,14 @@ server:
 spring:
   application:
     name: my-first-service
+
 eureka:
+  instance:
+    hostname: localhost
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+
