--- a/firstservice/src/main/resources/application.yml
+++ b/firstservice/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
-  port: 9001
+  port: 0
+
 spring:
   application:
     name: my-first-service
@@ -7,6 +8,7 @@ spring:
 eureka:
   instance:
     hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
