--- a/secondservice/src/main/resources/application.yml
+++ b/secondservice/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 server:
-  port: 9002
+  port: 0
+
 spring:
   application:
     name: my-second-service
 eureka:
   instance:
     hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
