--- a/microuserservice/build.gradle
+++ b/microuserservice/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// mapstruct
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final' // MapStruct 버전은 필요에 따라 변경 가능
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 }
 
 dependencyManagement {
