--- a/microuserservice/build.gradle
+++ b/microuserservice/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 	// mapstruct
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final' // MapStruct 버전은 필요에 따라 변경 가능
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 dependencyManagement {
