--- a/catalogs/build.gradle
+++ b/catalogs/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // mapstruct
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final' // MapStruct 버전은 필요에 따라 변경 가능
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 }
 
 dependencyManagement {
