--- a/microuserservice/src/main/resources/application.yml
+++ b/microuserservice/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         web-allow-others: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:mem:muser
+    url: jdbc:h2:mem:testdb
     username: sa
     password:
     driver-class-name: org.h2.Driver
