--- a/catalogs/build.gradle
+++ b/catalogs/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    runtimeOnly 'com.h2database:h2'
     // mapstruct
     implementation 'org.mapstruct:mapstruct:1.4.2.Final' // MapStruct 버전은 필요에 따라 변경 가능
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
