--- a/microuserservice/build.gradle
+++ b/microuserservice/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 }
 
 dependencyManagement {
