--- a/microuserservice/src/main/resources/application.yml
+++ b/microuserservice/src/main/resources/application.yml
@@ -29,5 +29,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
-
+logging:
+  level:
+    com.example.microuserservice: DEBUG
 
