--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -4,9 +4,15 @@ server:
 spring:
   application:
     name: config-service
+  profiles:
+    active:
+      - native
   cloud:
     config:
       label: main
       server:
+        native:
+          search-locations:
+            - file://${user.home}/Desktop/cert/config
         git:
           uri: https://github.com/JungMYEONG-jin/cloud-config.git
