micro user service order service와 통신하여 order list 가져오는 로직 추가.

--- a/microuserservice/build.gradle
+++ b/microuserservice/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 	// actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 dependencyManagement {
