--- a/microuserservice/src/main/resources/bootstrap.yml
+++ b/microuserservice/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 spring:
   cloud:
     config:
+      name: user-service
       uri: http://127.0.0.1:8888
-      name: ecommerce
-  profiles:
-    active:
-      - dev
+#  profiles:
+#    active:
+#      - dev
