micro user service error decoder 추가.

--- a/microuserservice/src/main/resources/application.yml
+++ b/microuserservice/src/main/resources/application.yml
@@ -25,7 +25,8 @@ eureka:
 
 logging:
   level:
-    com.example.microuserservice: DEBUG
+#    com.example.microuserservice: DEBUG
+    com.exmaple.microuserservice.client: DEBUG
 
 management:
   endpoints:
