MSA Catalog Service 1. add spring kafka 2. add consumer config 3. add consumer service

--- a/catalogs/build.gradle
+++ b/catalogs/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     // mapstruct
     implementation 'org.mapstruct:mapstruct:1.4.2.Final' // MapStruct 버전은 필요에 따라 변경 가능
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
