micro user service remove redundant dependencies

--- a/microuserservice/build.gradle
+++ b/microuserservice/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.cloud:spring-cloud-circuitbreaker-resilience4j'
+	implementation 'mysql:mysql-connector-java:8.0.33'
 }
 
 dependencyManagement {
