--- a/microuserservice/src/main/resources/application.yml
+++ b/microuserservice/src/main/resources/application.yml
@@ -29,6 +29,15 @@ logging:
     com.exmaple.microuserservice.client: DEBUG
 
 management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      consume: b3_single
+      produce: b3_multi
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
   endpoints:
     web:
       exposure:
