--- a/microuserservice/build.gradle
+++ b/microuserservice/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 	implementation 'org.springframework.cloud:spring-cloud-circuitbreaker-resilience4j'
 	implementation 'mysql:mysql-connector-java:8.0.33'
