--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -35,6 +35,31 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      consume: B3
+      produce: B3_MULTI
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  endpoints:
+    web:
+      exposure:
+        include:
+          - refresh
+          - health
+          - beans
+          - busrefresh
+          - zipkin
+          - prometheus
+          - metrics
+          - info
+
 logging:
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
   level:
     com.example.order: DEBUG
